# FrontrunBot

./: .env_example  .gitignore  Cargo.toml  foundry.toml  remappings.txt
bot/: frontrun.rs
bot/tests/: frontrun_test.rs
bot/utils/: arbitrage.rs  flashbot.rs  index.rs  simulate.rs
contract/: Arbitrage.sol
script/: Arbitrage.s.sol  NotFlationToken.s.sol
src/: Arbitrage.sol  lib.rs
src/collectors/: echo.rs
src/executors/: mod.rs  multi_bundle.rs  multi_tx.rs
src/strategies/: frontrun.rs  mod.rs
src/strategies/frontrun/states/: base.rs  eth.rs  token.rs
src/strategies/frontrun/strategies/: mod.rs
src/utils/: base.rs  contract.rs  flashbot.rs  listen.rs  mod.rs  simulate.rs
src/utils/simulate/state/: base.rs  eth.rs  math.rs  mod.rs  token.rs
src/utils/simulate/strategy/: flashloan.rs  transfer.rs
test/: Arbitrage.t.sol
test/poc/: 20221212_BGLD.t.sol  20221229_JAY.t.sol  20221230_Loan.t.sol  NotFlationToken.t.sol
tests/: frontrun_test.rs  t_16298449.rs  t_16384470.rs  t_bnb.rs
