[package]
name = "arbitrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers={ version = "2.0.4", features = ["ws", "rustls", "legacy"] }
cfmms={ git = "https://github.com/0xKitsune/cfmms-rs" }
artemis-core={ git = "https://github.com/paradigmxyz/artemis" }
ethers-flashbots = { version = "0.12.1" }
dotenv = { version = "0.15.0" }
tokio = "1.22.0"
url = "2.3.1"
async-trait = "0.1.64"
futures = "0.3.26"
anyhow = "1.0.71"
futures-util = "0.3.28"
